Resolve tdf#49091 "UI: Alt-Left, Alt-Right keyboard shortcuts ineffective"

Change-Id: I245943fb9185e03cf52f144d9e06ab22cda13592
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132651
Tested-by: Jenkins
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>